skill list added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <h1>this is the portfolio website</h1>
+
+    <div border="1px">
+        <ol>
+            <li>java</li>
+            <li>hibernate</li>
+            <li>spring boot</li>
+            <li>angular</li>
+        </ol>
+    </div>
 </body>
 </html>
