skillset heading added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>this is the portfolio website</h1>
 
     <div border="1px">
+        <h1>Skill Set</h1>
+        
         <ol>
             <li>java</li>
             <li>hibernate</li>
