soft skills added

--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 
     <div border="1px">
         <h1>Skill Set</h1>
-        
+
         <ol>
             <li>java</li>
             <li>hibernate</li>
             <li>spring boot</li>
             <li>angular</li>
+        </ol>
+    </div>
+
+    <div>
+        <h1>Soft Skill</h1>
+        <ol>
+            <li>stage courage</li>
+            <li>presentation</li>
+            <li>communication skills</li>
         </ol>
     </div>
 </body>
