query form added

--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
             <li>communication skills</li>
         </ol>
     </div>
+
+    <div>
+        <h1>query form added </h1>
+        <form>
+           name:  <input type="text">
+           query : <input type="text">
+        </form>
+    </div>
 </body>
 </html>
