course card Added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         passsword: <input type="password">
         <button>login</button>
     </div>
+
+    <h1>Course Card</h1>
     
+    <div border="1px">
+        <img src="wall.jpg" alt="">
+        <p>this is java course</p>
+        <button>view</button>
+    </div>
+
 </body>
 </html>
